test/grammar/nest_var/nest_var_fail_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:5
  |
5 |     name.name: "Alice"
  |     ^ expected str, got {str(name):str(Alice)}
  |
 --> ${CWD}/main.k:2:5
  |
2 |     name: str
  |     ^ variable is defined here, its type is str, but got {str(name):str(Alice)}
  |